fixing overflow again

--- a/src/components/style.scss
+++ b/src/components/style.scss
@@ -17,6 +17,13 @@ html {
     
 }
 
+
+body {
+    max-width: 100%;
+}
+
+
+
 a {
     text-decoration: none;
     color:rgb(80, 80, 80)
@@ -160,13 +167,12 @@ a {
 
 .div-menu-mobile {
     display: none;
-    position: fixed;
     margin: 0;
     background-color: rgba(224, 203, 225, 0.5);
-    padding: 0;
-    border: 0;
-    right: 0;
-    left: 0;
+    // padding: 0;
+    // border: 0;
+    // right: 0;
+    // left: 0;
     box-sizing: border-box;
     overflow-x: hidden;
     
@@ -183,6 +189,7 @@ a {
         top: 0;
         height: 100px;
         overflow-x: hidden;
+        
         
 
     }
@@ -214,11 +221,11 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 100px;
+    // margin-top: 100px;
     background-color: rgba(241, 241, 241, 0.8);
     z-index: 99999;
     position: fixed;
-    width: calc(100% - 10px);
+    width: 100%;
 }
 
 .ul-mobile {
@@ -414,7 +421,9 @@ a {
 }
 
 
-
+section {
+    width: 100%;
+}
 
 .section-about {
     width: 100%;
@@ -424,14 +433,14 @@ a {
     align-items: center;
     flex-wrap: wrap-reverse;
     margin-top: 100px;
-    position: relative;
-    margin-left: 20px;
+    // margin: 40px auto;
+    // position: relative;
+    // margin-left: 20px;
 
     .section-info {
         width: 100%;
-       max-width: 1000px;
-       overflow: visible;
-       margin-left: 200px;
+       max-width: 800px;
+       padding: 0px 20px;
     }
 
     .section-picture {
@@ -450,7 +459,7 @@ a {
     justify-content: center;
     flex-direction: row-reverse;
     flex-wrap: wrap;
-    margin-left: 50px;
+    // margin-left: 50px;
 }
 
 
